<resources>
    <string name="app_name">Project4_2</string>
    <string name="text1">선택을 시작하시겠습니까?</string>
    <string name="text2">좋아하는 애완동물은?</string>
    <string name="check1">시작함</string>
    <string name="radio_dog">강아지</string>
    <string name="radio_cat">고양이</string>
    <string name="radio_rabbit">토끼</string>
    <string name="btn_done">선택완료</string>
    <string name="btn_finish">종료</string>
    <string name="btn_first">처음으로</string>
</resources>