<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="20sp"/>
    <Switch
        android:id="@+id/switch_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check1"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="invisible">
        <TextView
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textSize="20sp"/>
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_dog"/>
            <RadioButton
                android:id="@+id/radio_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_cat"/>
            <RadioButton
                android:id="@+id/radio_rabbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_rabbit"/>
        </RadioGroup>
        <ImageView
            android:id="@+id/imgv"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/dog"/>
        <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_finish"/>
        <Button
            android:id="@+id/btn_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_first"/>
    </LinearLayout>
</LinearLayout>